# platform

./: .bash_profile  .coveragerc  .dockerignore  .gitignore  .gitmodules  Dockerfile  Pipfile  Procfile  README.md  db.sqlite3  experiment.py  manage.py  nginx.conf.sigil  requirements.txt  setup.cfg
backend/: Dockerfile  Dockerfile.dev  Pipfile  README.md  fly.toml  manage.py  pyproject.toml  setup.cfg
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/Platform/: urls.py
backend/Platform/settings/: base.py  ci.py  production.py  staging.py
backend/accounts/: admin.py  backends.py  mixins.py  models.py  oauth2_validator.py  serializers.py  update_majors.py  update_schools.py  urls.py  verification.py  views.py
backend/accounts/data/: users.json
backend/accounts/migrations/: 0001_initial.py  0002_auto_20200213_1711.py  0003_auto_20210918_2041.py  0004_user_profile_pic.py  0005_privacyresource_privacysetting.py  0006_alter_major_name.py
backend/announcements/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/announcements/migrations/: 0001_initial.py  0002_alter_announcement_announcement_type.py  0003_alter_announcement_release_time.py
backend/application/: urls.py  views.py
backend/docker/: nginx-default.conf  platform-run  supervisord.conf
backend/docker/shibboleth/: metadata.xml  shibboleth2.xml
backend/health/: urls.py  views.py
backend/identity/: apps.py  urls.py  utils.py  views.py
backend/monitor/: apps.py  urls.py  views.py
backend/org/: models.py  urls.py  views.py
backend/services/: models.py
(+254 files in other folders)
