[project]
name = "platform"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "dj-database-url==2.1.0",
    "djangorestframework==3.14.0",
    "djangorestframework-api-key==3.0.0",
    "psycopg2-binary==2.9.9",
    "sentry-sdk==1.34.0",
    "django-oauth-toolkit==2.3.0",
    "django-cors-headers==4.3.0",
    "django==4.2.7",
    "pyyaml==6.0.1",
    "uwsgi==2.0.23",
    "uritemplate==4.1.1",
    "shortener==0.2.1",
    "django-runtime-options==0.1.3",
    "jwcrypto==1.5.0",
    "django-phonenumber-field[phonenumbers]==7.2.0",
    "django-email-tools==0.1.1",
    "twilio==8.10.0",
    "lxml==4.9.3",
    "requests==2.31.0",
    "pillow==10.1.0",
    "boto3==1.28.78",
    "django-storages==1.14.2",
]

[dependency-groups]
dev = [
    "black==23.10.1",
    "unittest-xml-reporting==3.2.0",
    "flake8==6.1.0",
    "flake8-isort==5.0.3",
    "isort==4.3.21",
    "flake8-quotes==3.3.2",
    "django-debug-toolbar==4.2.0",
    "django-extensions==3.2.3",
    "flake8-absolute-import==1.0.0.2",
    "tblib==3.0.0",
    "coverage==7.3.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
